# 15418-final-project

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.ipynb  pyproject.toml
apps/: models.py  simple_ml.py
docs/: index.md
docs/milestone-report/: midway.tex
docs/project-proposal/: proposal.tex
python/needle/: __init__.py  autograd.py  backend_numpy.py  backend_selection.py  optim.py
python/needle/backend_ndarray/: ndarray.py
python/needle/init/: init_initializers.py
python/needle/nn/: nn_basic.py  nn_conv.py  nn_sequence.py  nn_transformer.py
python/needle/ops/: ops_logarithmic.py  ops_mathematic.py  ops_tuple.py
src/: main.cpp  main.cu  matmul.cu  matmul.cuh  ndarray_backend_cpu.cc  ndarray_backend_cuda.cu  softmax.cu  softmax.cuh  timing.cuh  transformer_naive.cu  transformer_naive.cuh  transformer_sparse.cu  transformer_sparse.cuh  transformer_sparse_softmax.cu  transformer_sparse_softmax.cuh  transformer_tiled.cu  transformer_tiled.cuh  transformer_tiled_matmul.cu  transformer_tiled_matmul.cuh
src/datastructures/: bcsr.cu  bcsr.cuh
tests/: test_matmul.cu
tests/hw4_extra/: test_transformer.py
website/: index.md
