[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "mugrade",
    "pybind11>=3.0.3",
    "torch>=2.11.0",
]

[tool.uv.sources]
mugrade = { git = "https://github.com/dlsys10714/mugrade.git" }
